syntax = "proto3";

package integration_service;
option go_package="genproto/integration_service";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

service TransactionService {
    rpc CreateTransactionSaveCard(TransactionSaveCard) returns (TransactionCreateResponse){}
    rpc CreateTransaction(Transaction) returns (TransactionCreateResponse){}
    rpc GetAllTransactions(TransactionFindRequest) returns (TransactionResponse){}
    rpc UpdateStatus(TransactionStatusUpdate) returns (TransactionStatusUpdateResponse){}
    rpc GetTransactionByID(TransactionRequest) returns (TransactionGetResponse){}
    rpc DeleteTransactionByID(TransactionRequest) returns (google.protobuf.Empty){}
}

message Transaction {
    string id = 1;
    string order_id = 2;
    string status = 3;
    string transaction_id = 4;
    int32 action = 5;
    string currency = 6;
    float price = 7;
    string created_date = 8;
    string created_at = 9;
    string updated_at = 10;
    string deleted_at = 11;
    google.protobuf.Struct data = 12;
    string product_id = 13;
    int32 amount = 14;
    string resp_id = 15;
}
message TransactionSaveCard {
    string id = 1;
    string order_id = 2;
    string status = 3;
    string transaction_id = 4;
    int32 action = 5;
    string currency = 6;
    float price = 7;
    string created_date = 8;
    string created_at = 9;
    string updated_at = 10;
    string deleted_at = 11;
    google.protobuf.Struct data = 12;
    string product_id = 13;
    int32 amount = 14;
    string resp_id = 15;
    string card_id = 16;
}


message TransactionResponse {
   repeated Transaction transactions = 1;
   int32 count = 2;
}

message TransactionCreateResponse {
    string id = 1;
}

message TransactionRequest {
    string id = 1;
}

message TransactionGetResponse {
    Transaction transaction = 1;
}

message TransactionStatusUpdate {
    string id = 1;
    string status = 2;
    string updated_at = 3;
}

message TransactionStatusUpdateResponse {
    string id = 1;
    string status = 2;
}

message TransactionFindRequest {
    int32 page = 1;
    int32 limit = 2;
    string search = 3;
    string order_id = 4;
}
